# MetaEnv

./: .gitignore  Dockerfile  README.md  eval.py  inference.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  server.js  validate-submission.sh
chaos/: events.js
env/: environment.js  grader.js  initialState.js  tasks.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DifficultyBadge.jsx  Header.jsx  RewardChart.jsx  StatePanel.jsx  StepLog.jsx
frontend/src/pages/: AgentRunner.jsx  Dashboard.jsx  DocsPage.jsx  Playground.jsx
server/: app.py
